--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </div>
         <div class="main">
             <div class="hamburger">
-                <img class="ham" src="hamburger.png" alt="" width="23">
-                <img class="cross" src="cross.jpg" alt="" width="23">            
+                <img class="ham" src="hamburger.png" alt="open sidebar" onclick="opensidebar()"width="23">
+                <img class="cross" src="cross.jpg" alt="close sidebar" onclick="closesidebar()" width="23">            
             </div>
             <div class="infocontainer">
                 <div class="devinfo">
