--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="sidebar sidebargo"> 
+        <div class="sidebar sidebargo" id="sidebar"> 
             <nav>
                 <ul>
                     <li><a href="/"> Home</a></li>
