--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="sidebar sidebargo"> 
+        <div class="sidebar sidebargo" id="sidebar"> 
             <nav>
                 <ul>
                     <li><a href="/"> Home</a></li>
@@ -21,7 +21,7 @@
             </nav>
         </div>
         <div class="main">
-            <div class="hamburger" id="sidebar">
+            <div class="hamburger">
                 <img class="ham" src="hamburger.png" alt="opensidebar" onclick="opensidebar()" width="23">
                 <img class="cross" src="cross.jpg" alt="closesidebar" onclick="closesidebar()" width="23">            
             </div>
