--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a href="/contact.html"> <button class="btn">Contact me</button></a>
                     </div>
                 </div>
-                    <div class="devpic"> <img src="saurav.png" alt="Saurav Khanal">
+                    <div class="devpic" id="boxx"> <img src="saurav.png" alt="Saurav Khanal">
                     </div>
             </div>
         </div>
