--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Saurav Khanal - Web Developer, Programmer, ML Enthusiast</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> <div class="background">
     <div class="container">
         <div class="sidebar sidebargo" id="sidebar"> 
             <nav>
@@ -44,7 +44,7 @@
                     </div>
             </div>
         </div>
-    </div>
+    </div></div>
     <script src="script.js"></script>
 </body>
 </html>
