--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="moreabout">Hi i am a developer, i love to drink milk tea. I live in Jhapa, i love to 
                         visit kathmandu to buy technical products
                     </div>
-                    <div class="buttons"><a href="/cv of saurav.pdf" target="_blank">
+                    <div class="buttons"><a href="/cv of saurav.pdf" target="blank">
                         <button class="btn">Download CV</button> </a>
                         <a href="/contact.html"> <button class="btn">Contact me</button></a>
                     </div>
