--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     </div>
                     <div class="name">Saurav Khanal</div>
                     <div class="about">Developer, Entrepreneur, Singer</div>
-                    <div class="moreabout">Hi i am a developer, i love to drink milk tea. I live in Jhapa, i love to 
-                        visit kathmandu to buy technical products
+                    <div class="moreabout">Hi i am a developer<br>, i love to drink milk tea. <br>I live in Jhapa, <br>i love to 
+                        <br>visit kathmandu to buy <br>technical products
                     </div>
                     <div class="buttons"><a href="/cv of saurav.pdf">
                         <button class="btn">Download CV</button></a>
