--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Saurav Khanal - Web Developer, Programmer, ML Enthusiast</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body> <div class="background" id="background">
+<body> 
+    /*background-image: url(bg.jpg); */
+    <div class="background" id="background">
     <div class="container">
         <div class="sidebar sidebargo" id="sidebar"> 
             <nav>
