--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-    /*background-image: url(bg.jpg); */
-    <div class="background" id="background">
+    background-image: url(bg.jpg);
+    
     <div class="container">
         <div class="sidebar sidebargo" id="sidebar"> 
             <nav>
