--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-    background-image: url(bg.jpg);
+    background-image: url(bgimg.jpg);
     
     <div class="container">
         <div class="sidebar sidebargo" id="sidebar"> 
