--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
                         <button class="btn">Contact me</button>
                     </div>
                 </div>
-                    <div class="devpic"> <img src="saurav.png" alt="Saurav Khanal">
+                   <!-- <div class="devpic"> <img src="saurav.png" alt="Saurav Khanal">-->
                     </div>
             </div>
         </div>
