--- a/services.html
+++ b/services.html
@@ -7,9 +7,9 @@
     <title>Saurav Khanal - Web Developer, Programmer, ML Enthusiast</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> 
     <div class="container">
-        <div class="sidebar sidebargo"> 
+        <div class="sidebar sidebargo" id="sidebar"> 
             <nav>
                 <ul>
                     <li><a href="/"> Home</a></li>
@@ -22,8 +22,8 @@
         </div>
         <div class="main">
             <div class="hamburger">
-                <img class="ham" src="hamburger.png" alt="" width="23">
-                <img class="cross" src="cross.jpg" alt="" width="23">            
+                <img class="ham" src="hamburger.png" alt="opensidebar" onclick="opensidebar()" width="23">
+                <img class="cross" src="cross.jpg" alt="closesidebar" onclick="closesidebar()" width="23">            
             </div>
             <div class="infocontainer">
                 <div class="devinfo">
@@ -32,19 +32,20 @@
                     </div>
                     <div class="name">Saurav Khanal</div>
                     <div class="about">Developer, Entrepreneur, Singer</div>
-                    <div class="moreabout">Hi i am a developer, i love to drink milk tea. I live in Jhapa, i love to 
-                        visit kathmandu to buy technical products
+                    <div class="moreabout">Hi i am a developer<br>, i love to drink milk tea. <br>I live in Jhapa, <br>i love to 
+                        <br>visit kathmandu to buy <br>technical products
                     </div>
-                    <div class="buttons">
-                        <button class="btn">Download CV</button>
-                        <button class="btn">Contact me</button>
+                    <div class="buttons"><a href="/cv of saurav.pdf">
+                        <button class="btn">Download CV</button></a>
+                        <a href="/contact.html"><button class="btn">Contact me</button></a>
                     </div>
                 </div>
-                   <!-- <div class="devpic"> <img src="saurav.png" alt="Saurav Khanal">-->
+                    <!--<div class="devpic" id="boxx"> <img src="saurav.png" alt="Saurav Khanal"> -->
                     </div>
             </div>
         </div>
-    </div>
+    </div></div>
     <script src="script.js"></script>
+</div>
 </body>
 </html>
