--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         </div>
         <div class="main">
             <div class="hamburger">
-                <img class="ham" src="hamburger.png" alt="opensidebar" onclick="opensidebar()" width="23">
+                <img class="ham" src="hehe.png" alt="opensidebar" onclick="opensidebar()" width="23">
+               <!-- <img class="ham" src="hamburger.png" alt="opensidebar" onclick="opensidebar()" width="23">-->
                 <img class="cross" src="cross.jpg" alt="closesidebar" onclick="closesidebar()" width="23">            
             </div>
             <div class="infocontainer">
