--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div class="main">
             <div class="hamburger">
                 <img class="ham" src="hehe.png" alt="opensidebar" onclick="opensidebar()" width="40">
+                <h1 class="portf">Portf</h1><h1 class="lio">lio</h1>
                <!-- <img class="ham" src="hamburger.png" alt="opensidebar" onclick="opensidebar()" width="23">-->
                 <img class="cross" src="cross.jpg" alt="closesidebar" onclick="closesidebar()" width="23">            
             </div>
