--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         <div class="main">
             <div class="hamburger">
                 <img class="ham" src="hehe.png" alt="opensidebar" onclick="opensidebar()" width="40">
-                <h1 class="portf">Portf</h1><h1 class="lio">lio</h1>
+                <h1 class="portf">Portf</h1><h1 class="lio">lio</h1></div>
                <!-- <img class="ham" src="hamburger.png" alt="opensidebar" onclick="opensidebar()" width="23">-->
-                <img class="cross" src="cross.jpg" alt="closesidebar" onclick="closesidebar()" width="23">            
+            <div class="cross">    
+            <img class="cross" src="cross.jpg" alt="closesidebar" onclick="closesidebar()" width="23">            
             </div>
             <div class="infocontainer">
                 <div class="devinfo">
