--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="main">
             <div class="hamburger">
-                <img class="ham" src="hehe.png" alt="opensidebar" onclick="opensidebar()" width="40">
+                <img class="ham" src="hehe.png" alt="opensidebar" onclick="opensidebar()" width="40"><p>Portfolio</p></img>
                 <h1 class="portf">Portf</h1><h1 class="lio">lio</h1></div>
                <!-- <img class="ham" src="hamburger.png" alt="opensidebar" onclick="opensidebar()" width="23">-->
             <div class="cross">    
