--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="hamburger">
                 <img class="ham" src="hehe.png" alt="opensidebar" onclick="opensidebar()" width="40">
                 </div>
-            <div class="portfolio"><h2><a href="/">Portfolio</a></h2></div>
+            <div class="portfolio" onclick="opensidebar()><h2>Portfolio</h2></div>
                <!-- <img class="ham" src="hamburger.png" alt="opensidebar" onclick="opensidebar()" width="23">-->
             <div class="cross">    
             <img class="cross" src="cross.jpg" alt="closesidebar" onclick="closesidebar()" width="23">            
