--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="hamburger">
                 <img class="ham" src="hehe.png" alt="opensidebar" onclick="opensidebar()" width="40">
                 </div>
-            <button onclick="opensidebar()"><h2>Portfolio</h2></button>
+            <button class="ham""><h2>Portfolio</h2></button>
                <!-- <img class="ham" src="hamburger.png" alt="opensidebar" onclick="opensidebar()" width="23">-->
             <div class="cross">    
             <img class="cross" src="cross.jpg" alt="closesidebar" onclick="closesidebar()" width="23">            
