--- a/intro.html
+++ b/intro.html
@@ -28,10 +28,8 @@
                 <img class="cross" src="cross.jpg" alt="" width="23">            
             </div>
             <div class="intro">
-                <h1>About me</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas a itaque expedita. Expedita,
-                    praesentium quibusdam minima a minus vel placeat illo optio, eos sunt facere consequuntur soluta
-                    officia maxime architecto?</p>
+                <h1>About me</h1><p>"Passionate Web Developer and IT Student | Crafting Digital Experiences | Bridging Creativity with Code | Let's Build the Future Together!"
+                </p>
                 <h2>My skills</h2>
                 <div class="skillcontainer"></div>
                 <div class="skillitem">HTML: <div class="skill"></div></div>
