--- a/index.html
+++ b/index.html
@@ -52,4 +52,8 @@
     <script src="script.js"></script>
 </div>
 </body>
+    <video autoplay muted loop id="video-bg">
+    <source src="your-video-file.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video>
 </html>
