--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </div>
 </body>
     <video autoplay muted loop id="video-bg">
-    <source src="your-video-file.mp4" type="video/mp4">
+    <source src="vid.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
 </html>
