--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
     </div></div>
     <script src="script.js"></script>
 </div>
+    <video autoplay muted loop id="video-bg">
+    <source src="vid.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video>
 </body>
     <video autoplay muted loop id="video-bg">
     <source src="vid.mp4" type="video/mp4">
