--- a/intro.html
+++ b/intro.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+    <div class="video-container">
+        <video autoplay muted loop poster="video-poster.jpg" class="background-video">
+            <source src="vid.mp4" type="video/mp4">
+            <!-- Add additional video sources for different formats if needed -->
+            Your browser does not support the video tag.
+        </video>
+         <div class="content">
     <div class="container">
         <div class="sidebar sidebargo">
             <nav>
@@ -42,6 +49,10 @@
         </div>
     </div>
     </div>
+        <h1>Web Developer</h1>
+            <p>Explore the World of Web Development</p>
+        </div>
+</div>
     <script src="script.js"></script>
 </body>
 
