--- a/intro.html
+++ b/intro.html
@@ -10,13 +10,6 @@
 </head>
 
 <body>
-    <div class="video-container">
-        <video autoplay muted loop poster="video-poster.jpg" class="background-video">
-            <source src="vid.mp4" type="video/mp4">
-            <!-- Add additional video sources for different formats if needed -->
-            Your browser does not support the video tag.
-        </video>
-         <div class="content">
     <div class="container">
         <div class="sidebar sidebargo">
             <nav>
@@ -31,8 +24,12 @@
         </div>
         <div class="main">
             <div class="hamburger">
-                <img class="ham" src="hamburger.png" alt="" width="23">
-                <img class="cross" src="cross.jpg" alt="" width="23">            
+                <img class="ham" src="hehe.png" alt="opensidebar" onclick="opensidebar()" width="40">
+                </div>
+            <div class="port""><h2>Portfolio</h2></div>
+               <!-- <img class="ham" src="hamburger.png" alt="opensidebar" onclick="opensidebar()" width="23">-->
+            <div class="cross">    
+            <img class="cross" src="cross.jpg" alt="closesidebar" onclick="closesidebar()" width="23">            
             </div>
             <div class="intro">
                 <h1>About me</h1><p>"Passionate Web Developer and IT Student | Crafting Digital Experiences | Bridging Creativity with Code | Let's Build the Future Together!"
