--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,12 @@
         </div>
         <div class="main">
             <div class="hamburger">
-                <img class="ham" src="hamburger.png" alt="" width="23">
-                <img class="cross" src="cross.jpg" alt="" width="23">            
+                <img class="ham" src="hehe.png" alt="opensidebar" onclick="opensidebar()" width="40">
+                </div>
+            <div class="port""><h2>Portfolio</h2></div>
+               <!-- <img class="ham" src="hamburger.png" alt="opensidebar" onclick="opensidebar()" width="23">-->
+            <div class="cross">    
+            <img class="cross" src="cross.jpg" alt="closesidebar" onclick="closesidebar()" width="23">            
             </div>
             <div class="contactform">
                 <h1>Contact me for work/general Enquiries</h1>
