--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <a href="/contact.html"><button class="btn">Contact me</button></a>
                     </div>
                 </div>
-                    <div class="devpic" id="boxx"> <img src="saurav.png" alt="Saurav Khanal">
+                    <div class="devpic" id="boxx"> <img src="saurav.png" alt="Saurav Khanal" alt="Developer Picture">
                     </div>
             </div>
         </div>
