--- a/intro.html
+++ b/intro.html
@@ -36,18 +36,22 @@
                 </p>
                 <h2>My skills</h2>
                 <div class="skillcontainer"></div>
-                <div class="skillitem">HTML: <div class="skill"></div></div>
-                <div class="skillitem">CSS: <div class="skill t5"></div></div>
+                <div class="skillitem">HTML:       <div class="skill"></div></div>
+                <div class="skillitem">CSS:        <div class="skill t5"></div></div>
                 <div class="skillitem">javascript: <div class="skill fifty"></div></div>
-                <div class="skillitem">Php: <div class="skill t5"></div></div>
-                <div class="skillitem">Python: <div class="skill"></div></div>
+                <div class="skillitem">Php:        <div class="skill t5"></div></div>
+                <div class="skillitem">Python:     <div class="skill"></div></div>
+                <div class="skillitem">C language: <div class="skill"></div></div>
+                <div class="skillitem">C++:        <div class="skill"></div></div>
+                <div class="skillitem">Java:       <div class="skill"></div></div>
+                <div class="skillitem">MySQL:      <div class="skill"></div></div>
+                <div class="skillitem">Jquery:     <div class="skill"></div></div>
             </div>
             <!-- TODO: Create a gallery for my project -->
         </div>
     </div>
     </div>
-        <h1>Web Developer</h1>
-            <p>Explore the World of Web Development</p>
+        
         </div>
 </div>
     <script src="script.js"></script>
