--- a/intro.html
+++ b/intro.html
@@ -36,16 +36,16 @@
                 </p>
                 <h2>My skills</h2>
                 <div class="skillcontainer"></div>
-                <div class="skillitem">HTML:       <div class="skill"></div></div>
-                <div class="skillitem">CSS:        <div class="skill t5"></div></div>
+                <div class="skillitem">HTML:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill"></div></div>
+                <div class="skillitem">CSS:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill t5"></div></div>
                 <div class="skillitem">javascript: <div class="skill fifty"></div></div>
-                <div class="skillitem">Php:        <div class="skill t5"></div></div>
-                <div class="skillitem">Python:     <div class="skill"></div></div>
+                <div class="skillitem">Php:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill t5"></div></div>
+                <div class="skillitem">Python:&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill"></div></div>
                 <div class="skillitem">C language: <div class="skill"></div></div>
-                <div class="skillitem">C++:        <div class="skill"></div></div>
-                <div class="skillitem">Java:       <div class="skill"></div></div>
-                <div class="skillitem">MySQL:      <div class="skill"></div></div>
-                <div class="skillitem">Jquery:     <div class="skill"></div></div>
+                <div class="skillitem">C++:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill"></div></div>
+                <div class="skillitem">Java:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill"></div></div>
+                <div class="skillitem">MySQL:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill"></div></div>
+                <div class="skillitem">Jquery:&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill"></div></div>
             </div>
             <!-- TODO: Create a gallery for my project -->
         </div>
