--- a/intro.html
+++ b/intro.html
@@ -46,6 +46,9 @@
                 <div class="skillitem">Java:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill .lten"></div></div>
                 <div class="skillitem">MySQL:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill ten"></div></div>
                 <div class="skillitem">Jquery:&nbsp;&nbsp;&nbsp;&nbsp;<div class="skill ten"></div></div>
+                <div class="filling-box">
+    <div class="fill-animation"></div>
+                </div>
             </div>
             <!-- TODO: Create a gallery for my project -->
         </div>
