--- a/blog.html
+++ b/blog.html
@@ -38,8 +38,7 @@
                 
                 <div class="blogitem">
                     <h2>Decoding the Wonders of Artificial Intelligence</h2>
-               <p>1. ## <h3>Introduction: The AI Revolution</h3>
-   - Set the stage by highli## <h3>Introduction: The AI Revolution</h3>
+               <p><h3>Introduction: The AI Revolution</h3>
 - In a world increasingly defined by technological advancements, Artificial Intelligence (AI) stands as a revolutionary force reshaping our daily lives.
 - From smart assistants to complex algorithms, AI is becoming an integral part of our interconnected world.
 
