--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@
 - Discuss the current trends that influence my design aesthetics.
 - Illustrate how I balance staying on-trend while preserving a unique, timeless quality in my work.
 
-# ...</p></div>
+# ...</p><button class="btn btn-sm">Read more</button></div>
                 
                 <div class="blogitem">
                     <h2>Decoding the Wonders of Artificial Intelligence</h2>
