--- a/blog.html
+++ b/blog.html
@@ -30,118 +30,117 @@
             <img class="cross" src="cross.jpg" alt="closesidebar" onclick="closesidebar()" width="23">            
             </div>
             <div class="blogcontainer">
-                <h1>Blogs by Saurav - the legend </h1>
+                <h1>Blogs by Saurav - the legend <br></h1>
                 <div class="blogitem">
-                    <h2>Title: Crafting Visual Narratives: A Glimpse into My Graphic Design Odyssey</h2>
-                <p><h3>Introduction: The Artistry of Graphic Design</h3>
-- Welcome to the world where visual storytelling takes center stage, and graphic design becomes a language of expression.
-- Explore the profound impact of graphic design in conveying messages and evoking emotions.
+                    <h2>Title: Crafting Visual Narratives: A Glimpse into My Graphic Design Odyssey<br></h2>
+                <p><h3>Introduction: The Artistry of Graphic Design<br></h3>
+- Welcome to the world where visual storytelling takes center stage, and graphic design becomes a language of expression.<br>
+- Explore the profound impact of graphic design in conveying messages and evoking emotions.<br>
 
-## <h3>The Foundations of My Design Approach</h3>
-- Delve into my commitment to principles like balance, contrast, alignment, and proximity.
-- Share insights into the synergy between color theory and typography in shaping the visual narrative.
+<h3>The Foundations of My Design Approach<br></h3>
+- Delve into my commitment to principles like balance, contrast, alignment, and proximity.<br>
+- Share insights into the synergy between color theory and typography in shaping the visual narrative.<br>
 
-## <h3>Tools I Weave Magic With</h3>
-- Unveil the palette of graphic design software and tools I wield in my creative process.
-- Explain how each tool contributes to the intricacies of my design work.
+<h3>Tools I Weave Magic With<br></h3>
+- Unveil the palette of graphic design software and tools I wield in my creative process.<br>
+- Explain how each tool contributes to the intricacies of my design work.<br>
 
-## <h3>The Artistic Alchemy: My Creative Process</h3>
-- Walk through the stages of ideation, creation, and refinement in my design process.
-- Narrate the stories behind some of my favorite projects, showcasing the evolution of ideas to visuals.
+<h3>The Artistic Alchemy: My Creative Process<br></h3>
+- Walk through the stages of ideation, creation, and refinement in my design process.<br>
+- Narrate the stories behind some of my favorite projects, showcasing the evolution of ideas to visuals.<br>
 
-## <h3>Capturing the Zeitgeist: Trends in My Design Universe</h3>
-- Discuss the current trends that influence my design aesthetics.
-- Illustrate how I balance staying on-trend while preserving a unique, timeless quality in my work.
+<h3>Capturing the Zeitgeist: Trends in My Design Universe<br></h3>
+- Discuss the current trends that influence my design aesthetics.<br>
+- Illustrate how I balance staying on-trend while preserving a unique, timeless quality in my work.<br>
 
-# ...</p><button class="btn btn-sm">Read more</button></div>
+</p><button class="btn btn-sm">Read more</button></div>
                 
                 <div class="blogitem">
-                    <h2>Decoding the Wonders of Artificial Intelligence</h2>
-               <p><h3>Introduction: The AI Revolution</h3>
-- In a world increasingly defined by technological advancements, Artificial Intelligence (AI) stands as a revolutionary force reshaping our daily lives.
-- From smart assistants to complex algorithms, AI is becoming an integral part of our interconnected world.
+                    <h2>Decoding the Wonders of Artificial Intelligence<br></h2>
+               <p><h3>Introduction: The AI Revolution<br></h3>
+- In a world increasingly defined by technological advancements, Artificial Intelligence (AI) stands as a revolutionary force reshaping our daily lives.<br>
+- From smart assistants to complex algorithms, AI is becoming an integral part of our interconnected world.<br>
 
-## <h3>The Birth and Evolution of AI</h3>
-- <em>1956:</em> Dartmouth Workshop marks the official beginning of AI research.
-- <em>Over the decades:</em> Milestones such as the development of expert systems and the advent of machine learning contribute to the evolution of AI.
+<h3>The Birth and Evolution of AI<br></h3>
+- <em>1956:</em> Dartmouth Workshop marks the official beginning of AI research.<br>
+- <em>Over the decades:</em> Milestones such as the development of expert systems and the advent of machine learning contribute to the evolution of AI.<br>
 
-## <h3>Understanding the Core Concepts</h3>
-- **Machine Learning:** A subset of AI enabling systems to learn and improve from experience.
-- **Deep Learning:** Mimicking the human brain's neural networks, allowing for advanced pattern recognition.
+<h3>Understanding the Core Concepts<br></h3>
+- **Machine Learning:** A subset of AI enabling systems to learn and improve from experience.<br>
+- **Deep Learning:** Mimicking the human brain's neural networks, allowing for advanced pattern recognition.<br>
 
-## <h3>The Role of AI in Everyday Life</h3>
-- AI-driven recommendations on streaming platforms personalize user experiences.
-- Virtual assistants like Siri and Alexa simplify tasks, showcasing the seamless integration of AI into our daily routines.
+<h3>The Role of AI in Everyday Life<br></h3>
+- AI-driven recommendations on streaming platforms personalize user experiences.<br>
+- Virtual assistants like Siri and Alexa simplify tasks, showcasing the seamless integration of AI into our daily routines.<br>
 
-## <h3>AI Ethics and Responsible Innovation</h3>
-- <em>Privacy:</em> Addressing concerns about the use of personal data in AI algorithms.
-- <em>Fairness:</em> Striving to eliminate bias in AI systems to ensure equitable outcomes.
+<h3>AI Ethics and Responsible Innovation<br></h3>
+- <em>Privacy:</em> Addressing concerns about the use of personal data in AI algorithms.<br>
+- <em>Fairness:</em> Striving to eliminate bias in AI systems to ensure equitable outcomes.<br>
 
-# ... </p><button class="btn btn-sm">Read more</button>    
+</p><button class="btn btn-sm">Read more</button>    
             </div>
                 <div class="blogitem">
-                    <h2>Unlocking Data Realms: Navigating the World of Databases</h2>
-                <p><h3>Introduction: The Backbone of Information Management</h3>
-- Dive into the pivotal role databases play in organizing, storing, and retrieving vast amounts of information.
-- Explore their significance in powering applications and facilitating seamless data management.
+                    <h2>Unlocking Data Realms: Navigating the World of Databases<br></h2>
+                <p><h3>Introduction: The Backbone of Information Management<br></h3>
+- Dive into the pivotal role databases play in organizing, storing, and retrieving vast amounts of information.<br>
+- Explore their significance in powering applications and facilitating seamless data management.<br>
 
-## <h3>The Evolution of Databases</h3>
-- **Relational Databases:** Emerged in the '70s, fostering structured data storage and efficient querying.
-- **NoSQL Databases:** A response to the demand for handling unstructured and dynamic data in modern applications.
+<h3>The Evolution of Databases<br></h3>
+- **Relational Databases:** Emerged in the '70s, fostering structured data storage and efficient querying.<br>
+- **NoSQL Databases:** A response to the demand for handling unstructured and dynamic data in modern applications.<br>
 
-## <h3>Understanding Database Models</h3>
-- **Relational Model:** Tables, rows, and columns form the foundation of structured data storage.
-- **Document Store:** NoSQL databases like MongoDB excel in handling flexible, document-oriented data.
+<h3>Understanding Database Models<br></h3>
+- **Relational Model:** Tables, rows, and columns form the foundation of structured data storage.<br>
+- **Document Store:** NoSQL databases like MongoDB excel in handling flexible, document-oriented data.<br>
 
-## <h3>Tools of the Database Trade</h3>
-- Explore popular database management systems (DBMS) like MySQL, PostgreSQL, and MongoDB.
-- Discuss the strengths and use cases of each, highlighting their role in diverse applications.
+<h3>Tools of the Database Trade<br></h3>
+- Explore popular database management systems (DBMS) like MySQL, PostgreSQL, and MongoDB.<br>
+- Discuss the strengths and use cases of each, highlighting their role in diverse applications.<br>
 
-## <h3>Database Design Principles</h3>
-- **Normalization:** Ensuring data integrity through efficient structuring of relational databases.
-- **Indexing:** Optimizing data retrieval by creating indexes on key columns.
+<h3>Database Design Principles<br></h3>
+- **Normalization:** Ensuring data integrity through efficient structuring of relational databases.<br>
+- **Indexing:** Optimizing data retrieval by creating indexes on key columns.<br>
 
-## <h3>Data Security and Privacy</h3>
-- Explore the critical aspects of securing databases against unauthorized access and potential breaches.
-- Discuss compliance with data protection regulations and privacy considerations.
+<h3>Data Security and Privacy<br></h3>
+- Explore the critical aspects of securing databases against unauthorized access and potential breaches.<br>
+- Discuss compliance with data protection regulations and privacy considerations.<br>
 
-## <h3>Challenges in Database Management</h3>
-- Address common challenges such as scalability, data redundancy, and ensuring data consistency.
-- Discuss strategies and technologies for overcoming these challenges in modern database environments.
+<h3>Challenges in Database Management<br></h3>
+- Address common challenges such as scalability, data redundancy, and ensuring data consistency.<br>
+- Discuss strategies and technologies for overcoming these challenges in modern database environments.<br>
 
-# ...</p><button class="btn btn-sm">Read more</button>   
+</p><button class="btn btn-sm">Read more</button>   
             </div>
                 <div class="blogitem">
-                    <h2>Deciphering Big Data: Navigating the Data Deluge</h2>
-                <p><h3>Introduction: Unraveling the Big Data Revolution</h3>
-- Embark on a journey through the era of Big Data, where massive volumes of information redefine the landscape of data analytics.
-- Discuss the impact of Big Data on decision-making, innovation, and insights across various industries.
+                    <h2>Deciphering Big Data: Navigating the Data Deluge<br></h2>
+                <p><h3>Introduction: Unraveling the Big Data Revolution<br></h3>
+- Embark on a journey through the era of Big Data, where massive volumes of information redefine the landscape of data analytics.<br>
+- Discuss the impact of Big Data on decision-making, innovation, and insights across various industries.<br>
 
-## <h3>The Four Vs of Big Data</h3>
-- **Volume:** Explore the sheer magnitude of data generated daily and the challenges in processing and storing it.
-- **Velocity:** Examine the speed at which data is generated, requiring real-time processing for timely insights.
-- **Variety:** Discuss the diverse types of data, from structured to unstructured, and the need for flexible processing methods.
-- **Veracity:** Address the reliability and trustworthiness of data, emphasizing the importance of data quality.
+<h3>The Four Vs of Big Data<br></h3>
+- **Volume:** Explore the sheer magnitude of data generated daily and the challenges in processing and storing it.<br>
+- **Velocity:** Examine the speed at which data is generated, requiring real-time processing for timely insights.<br>
+- **Variety:** Discuss the diverse types of data, from structured to unstructured, and the need for flexible processing methods.<br>
+- **Veracity:** Address the reliability and trustworthiness of data, emphasizing the importance of data quality.<br>
 
-## <h3>Key Technologies in the Big Data Ecosystem</h3>
-- **Hadoop:** Delve into the open-source framework for distributed storage and processing of large data sets.
-- **Spark:** Explore the fast and general-purpose cluster-computing framework for Big Data processing.
-- **NoSQL Databases:** Discuss their role in handling unstructured and semi-structured data efficiently.
+<h3>Key Technologies in the Big Data Ecosystem<br></h3>
+- **Hadoop:** Delve into the open-source framework for distributed storage and processing of large data sets.<br>
+- **Spark:** Explore the fast and general-purpose cluster-computing framework for Big Data processing.<br>
+- **NoSQL Databases:** Discuss their role in handling unstructured and semi-structured data efficiently.<br>
 
-## <h3>Data Processing Paradigms</h3>
-- **Batch Processing:** Analyzing large volumes of data at scheduled intervals for insights.
-- **Stream Processing:** Real-time analysis of data as it is generated, enabling immediate decision-making.
+<h3>Data Processing Paradigms<br></h3>
+- **Batch Processing:** Analyzing large volumes of data at scheduled intervals for insights.<br>
+- **Stream Processing:** Real-time analysis of data as it is generated, enabling immediate decision-making.<br>
+<h3>Use Cases Across Industries</h3><br>
+- **Healthcare:** Analyzing patient data for personalized treatment plans.<br>
+- **Finance:** Detecting fraud and optimizing investment strategies through predictive analytics.<br>
+- **Retail:** Enhancing customer experiences through targeted recommendations and inventory management.<br>
 
-## <h3>Use Cases Across Industries</h3>
-- **Healthcare:** Analyzing patient data for personalized treatment plans.
-- **Finance:** Detecting fraud and optimizing investment strategies through predictive analytics.
-- **Retail:** Enhancing customer experiences through targeted recommendations and inventory management.
+<h3>Challenges and Future Trends<br></h3>
+- Discuss challenges such as data security, privacy concerns, and the scarcity of skilled professionals in the Big Data field.<br>
+- Explore emerging trends like edge computing, AI integration, and the evolution of Big Data technologies.<br>
 
-## <h3>Challenges and Future Trends</h3>
-- Discuss challenges such as data security, privacy concerns, and the scarcity of skilled professionals in the Big Data field.
-- Explore emerging trends like edge computing, AI integration, and the evolution of Big Data technologies.
-
-# ...</p><button class="btn btn-sm">Read more</button>    
+</p><button class="btn btn-sm">Read more</button>    
             </div>
             </div>
         </div>
