--- a/blog.html
+++ b/blog.html
@@ -32,6 +32,9 @@
             <div class="blogcontainer">
                 <h1>Blogs by Saurav - the legend <br></h1>
                 <div class="blogitem">
+                    <div class="blog-img">
+                        <img src="blog1.jpg" alt="blog">
+                    </div>
                     <h2>Title: Crafting Visual Narratives: A Glimpse into My Graphic Design Odyssey<br></h2>
                 <p><h3>Introduction: The Artistry of Graphic Design<br></h3>
 - Welcome to the world where visual storytelling takes center stage, and graphic design becomes a language of expression.<br>
@@ -56,6 +59,9 @@
 </p><button class="btn btn-sm">Read more</button></div>
                 
                 <div class="blogitem">
+                    <div class="blog-img">
+                        <img src="blog2.jpg" alt="blog">
+                    </div>
                     <h2>Decoding the Wonders of Artificial Intelligence<br></h2>
                <p><h3>Introduction: The AI Revolution<br></h3>
 - In a world increasingly defined by technological advancements, Artificial Intelligence (AI) stands as a revolutionary force reshaping our daily lives.<br>
@@ -80,6 +86,9 @@
 </p><button class="btn btn-sm">Read more</button>    
             </div>
                 <div class="blogitem">
+                    <div class="blog-img">
+                        <img src="blog3.jpg" alt="blog">
+                    </div>
                     <h2>Unlocking Data Realms: Navigating the World of Databases<br></h2>
                 <p><h3>Introduction: The Backbone of Information Management<br></h3>
 - Dive into the pivotal role databases play in organizing, storing, and retrieving vast amounts of information.<br>
@@ -112,6 +121,9 @@
 </p><button class="btn btn-sm">Read more</button>   
             </div>
                 <div class="blogitem">
+                    <div class="blog-img">
+                        <img src="blog4.jpg" alt="blog">
+                    </div>
                     <h2>Deciphering Big Data: Navigating the Data Deluge<br></h2>
                 <p><h3>Introduction: Unraveling the Big Data Revolution<br></h3>
 - Embark on a journey through the era of Big Data, where massive volumes of information redefine the landscape of data analytics.<br>
