--- a/blog.html
+++ b/blog.html
@@ -39,6 +39,7 @@
 <span> 31 December 2023 / Graphics Design </span>
                        <a href="#" class="blog-title">What has happened of all of the graphics design</a> 
 <p> Graphics design</p>
+                        <a href="#"> Read More </a>
                 </div>
                 <div class="blogitem">
                     <div class="blog-img">
