--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,36 @@
 <p> Graphics design</p>
                         <a href="#"> Read More </a>
                 </div>
+                    <div class="blogitem">
+                    <div class="blog-img">
+                        <img src="blog1.jpg" alt="blog">
+                    </div>
+                    <div class="blog-text">
+<span> 31 December 2023 / Graphics Design </span>
+                       <a href="#" class="blog-title">What has happened of all of the graphics design</a> 
+<p> Graphics design</p>
+                        <a href="#"> Read More </a>
+                    </div>
+                        <div class="blogitem">
+                    <div class="blog-img">
+                        <img src="blog1.jpg" alt="blog">
+                    </div>
+                    <div class="blog-text">
+<span> 31 December 2023 / Graphics Design </span>
+                       <a href="#" class="blog-title">What has happened of all of the graphics design</a> 
+<p> Graphics design</p>
+                        <a href="#"> Read More </a>
+                    </div>
+                            <div class="blogitem">
+                    <div class="blog-img">
+                        <img src="blog1.jpg" alt="blog">
+                    </div>
+                    <div class="blog-text">
+<span> 31 December 2023 / Graphics Design </span>
+                       <a href="#" class="blog-title">What has happened of all of the graphics design</a> 
+<p> Graphics design</p>
+                        <a href="#"> Read More </a>
+                    </div>
                 <div class="blogitem">
                     <div class="blog-img">
                         <img src="blog2.jpg" alt="blog">
