--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
                        <a href="#" class="blog-title">What has happened of all of the graphics design</a> 
 <p> Graphics design</p>
                         <a href="#"> Read More </a>
-                </div>
+                </div></div>
                     <div class="blogitem">
                     <div class="blog-img">
                         <img src="blog1.jpg" alt="blog">
@@ -50,7 +50,7 @@
                        <a href="#" class="blog-title">What has happened of all of the graphics design</a> 
 <p> Graphics design</p>
                         <a href="#"> Read More </a>
-                    </div>
+                    </div></div>
                         <div class="blogitem">
                     <div class="blog-img">
                         <img src="blog1.jpg" alt="blog">
@@ -60,7 +60,7 @@
                        <a href="#" class="blog-title">What has happened of all of the graphics design</a> 
 <p> Graphics design</p>
                         <a href="#"> Read More </a>
-                    </div>
+                    </div></div>
                             <div class="blogitem">
                     <div class="blog-img">
                         <img src="blog1.jpg" alt="blog">
