--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
                 <h1>Blogs by Saurav - the legend <br></h1>
                 <div class="blogitem">
                     <div class="blog-img">
-                        <img src="blog1.jpg" alt="blog">
+                        <img src="blog1.jpeg" alt="blog">
                     </div>
                     <div class="blog-text">
 <span> 31 December 2023 / Graphics Design </span>
@@ -43,7 +43,7 @@
                 </div></div>
                     <div class="blogitem">
                     <div class="blog-img">
-                        <img src="blog1.jpg" alt="blog">
+                        <img src="blog2.jpg" alt="blog">
                     </div>
                     <div class="blog-text">
 <span> 31 December 2023 / Graphics Design </span>
@@ -53,7 +53,7 @@
                     </div></div>
                         <div class="blogitem">
                     <div class="blog-img">
-                        <img src="blog1.jpg" alt="blog">
+                        <img src="blog3.jpg" alt="blog">
                     </div>
                     <div class="blog-text">
 <span> 31 December 2023 / Graphics Design </span>
@@ -63,7 +63,7 @@
                     </div></div>
                             <div class="blogitem">
                     <div class="blog-img">
-                        <img src="blog1.jpg" alt="blog">
+                        <img src="blog4.jpg" alt="blog">
                     </div>
                     <div class="blog-text">
 <span> 31 December 2023 / Graphics Design </span>
