--- a/blog1.html
+++ b/blog1.html
@@ -1,1 +1,51 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable= no">
+    <title>Saurav Khanal - Web Developer, Programmer, ML Enthusiast</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="sidebar sidebargo"> 
+            <nav>
+                <ul>
+                    <li><a href="/"> Home</a></li>
+                    <li><a href="/intro.html"> My Intro</a></li>
+                    <li><a href="/services.html"> Services</a></li>
+                    <li><a href="/blog.html"> Blog</a></li>
+                    <li><a href="/contact.html">Contact me</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="main">
+            <div class="hamburger">
+                <img class="ham" src="hehe.png" alt="opensidebar" onclick="opensidebar()" width="40">
+                </div>
+            <div class="port""><h2>Portfolio</h2></div>
+               <!-- <img class="ham" src="hamburger.png" alt="opensidebar" onclick="opensidebar()" width="23">-->
+            <div class="cross">    
+            <img class="cross" src="cross.jpg" alt="closesidebar" onclick="closesidebar()" width="23">            
+            </div>
+            <div class="blogcontainer">
+                <h1>Blogs by Saurav - the legend <br></h1>
+                <div class="blogitem">
+                    <div class="blog-img">
+                        <img src="blog1.jpeg" alt="blog">
+                    </div>
+                    <div class="blog-text">
+<span> 31 December 2023 / Graphics Design </span>
+                       <a href="#" class="blog-title">What has happened of all of the graphics design</a> 
+<p> Graphics design</p>
+                        <a href="#"> Read More </a>
+                </div></div>
+                    
+                
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+  </html>
