--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="blog-text">
 <span> 31 December 2023 / Graphics Design </span>
-                       <a href="#" class="blog-title">What has happened of all of the graphics design</a> 
+                       <a href="blog1.html" class="blog-title">What has happened of all of the graphics design</a> 
 <p> Graphics design</p>
                         <a href="#"> Read More </a>
                 </div></div>
